# Arkanoid

./: .gitignore  CMakeLists.txt  CPackConfig.cmake.in  arkanoid.pc.in  config.h.cmake.in
data/: config.cfg  highscores  map.cfg  map2.cfg  map3.cfg  map4.cfg
prj/msvc/: Arkanoid.vcxproj  VS_ProjectPropertySheet_SDLd.props
src/: Animation.cpp  Animation.h  Background.cpp  Background.h  Ball.cpp  Ball.h  Block.cpp  Block.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  Effect.cpp  Effect.h  FpsCounter.cpp  FpsCounter.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Gui.cpp  Gui.h  Makefile.am  MapLoader.cpp  MapLoader.h  MenuState.cpp  MenuState.h  Music.cpp  Music.h  Platform.cpp  Platform.h  PlayingState.cpp  PlayingState.h  Projectile.cpp  Projectile.h  State.cpp  State.h  defines.h  main.cpp  scaler.cpp  scaler.h  (+1 more)
